# cgi-qgis-plugin-sandbox-day

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .qgis-plugin-ci  README.md  cgi-qgis-plugin-sandbox-day.code-workspace  create_qgis_venv.py  instructions.md  navici_apit_v1.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  ruff_defaults.toml  sandboxday.md
.github/workflows/: test-and-pre-release.yml
cgiqgispluginsandboxday/: __init__.py  build.py  constants.py  debugger.py  dock_widget.py  layer_selector_widget.py  logger.py  metadata.txt  plugin.py  routing_widget.py
docs/: development.md
tests/: conftest.py  pyproject.toml  test_plugin.py
