[project]
name = "cgi-qgis-plugins-sandbox-day"
version = "0.0.1"
description = "CGI QGIS Plugins Sandbox Day"
authors = [
  { name="Ville Joensuu", email="ville.joensuu@cgi.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff.lint.isort]
known-first-party = ["cgiqgispluginsandboxday"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "ICN",  # flake8-import-conventions
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "TID",  # flake8-tidy-imports
    "ERA",  # eradicate
    "PL",   # Pylint
    "RUF",  # Ruff-specific rules
    "D",    # Docstring
    "ANN",  # flake8-annotations
    "PD",   # Pandas
    "TRY",  # tryceratops
    "FAST", # fastapi
    "NPY",  # numpy

]
ignore = [
    "E712", # true-false-comparison, shows false positives with SQLModel
    "E501", # line too long, formatter makes best effort to avoid long lines
    "D301", # use r""" for regex docstrings (not compatible with click)
    "TRY003",  # exception with a message
    "ERA001",  # commented out code
    "PLR0913",  # too many arguments
    "PLW0603",  # using global variable
]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = [
        "tests/",
        "__pycache__/",
]

[[tool.mypy.overrides]]
module = ["qgis.*", "osgeo.*"]
ignore_missing_imports = true
